@@ -5,15 +5,19 @@ import drones.gr2.exception.PathException;
 import java.util.ArrayList;
 
 public class Path {
+    private ArrayList<Position> potitions;
+
     public Path(ArrayList<Position> potitions) {
         this.potitions = potitions;
     }
 
-    private ArrayList<Position> potitions = new ArrayList<>();
+    public ArrayList<Position> getPotitions() {
+        return potitions;
+    }
 
     public Position nextPosition(){
         if(potitions.size()<=1) throw new PathException("Plus de position dans le parcours");
-        potitions.remove(0);
-        return potitions.get(0);
+
+        return potitions.getFirst();
     }
 }
